syntax = "proto3";

option go_package = "/pb";

message PingRequest {
  string whoAmI = 1;
}

message PongResponse {
  string idk = 1;
}

service LkatService {
  rpc Ping(PingRequest) returns (PongResponse) {}
}